--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -13,7 +13,7 @@ Follow these examples to design a Qiskit Runtime algorithm.
 
 Use the Estimator primitive to design an algorithm that calculates expectation values.
 
-**Backend.run() model:** In this model, you accessed real systems and remote simulators by using the `qiskit-ibmq-provider` or the `qiskit-ibm-provider` module. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface.
+**Backend.run() model:** In this model, you accessed real systems and remote simulators by using the `qiskit-ibmq-provider` or the `qiskit-ibm-provider` module. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface. The following examples assume you have defined circuits `isa_circuits`.
 
 
 <Tabs>
@@ -28,7 +28,7 @@ provider = IBMQ.get_provider(hub="ibm-q", group="open", project="main")
 backend = provider.get_backend("ibmq_qasm_simulator") # cloud simulator
 
 # Run
-result = backend.run(expectation_circuits)
+result = backend.run(isa_circuits)
 ```
   </TabItem>
 
@@ -40,7 +40,7 @@ from qiskit_aer import AerSimulator # former import: from qiskit import Aer
 backend = AerSimulator()
 
 # Run
-result = backend.run(expectation_circuits)
+result = backend.run(isa_circuits)
 ```
   </TabItem>
 </Tabs>
@@ -164,6 +164,25 @@ op = SparsePauliOp.from_list(
 state = QuantumCircuit(2)
 state.x(0)
 state.x(1)
+
+# Define provider and simulator backend
+from qiskit import IBMQ
+
+provider = IBMQ.get_provider(hub="ibm-q", group="open", project="main")
+backend = provider.get_backend("ibmq_qasm_simulator")
+
+# Define a statevector simulator
+# from qiskit_aer import AerSimulator
+# backend = AerSimulator(method="statevector", shots=100)
+
+# Define a real backend
+# backend = provider.get_backend("ibm_brisbane")
+
+# Circuits must obey the Instruction Set Architecture (ISA) of a particular backend.
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_state = pm.run(state)
 ```
   </TabItem>
 </Tabs>
@@ -179,7 +198,7 @@ and quantum states, so the problem defined above would be wrapped as:
 from qiskit.opflow import CircuitStateFn, PauliSumOp
 
 opflow_op = PauliSumOp(op)
-opflow_state = CircuitStateFn(state)
+opflow_state = CircuitStateFn(isa_state)
 ```
 
 This step is not necessary when using the primitives. For instructions to migrate from `qiskit.opflow`, see the [Opflow migration guide](./qiskit-opflow-module).
@@ -222,17 +241,6 @@ measurable_expression = StateFn(opflow_op, is_measurement=True).compose(opflow_s
 # Convert to expectation value calculation object
 expectation = PauliExpectation().convert(measurable_expression)
 
-# Define provider and simulator backend
-provider = IBMQ.get_provider(hub="ibm-q", group="open", project="main")
-backend = provider.get_backend("ibmq_qasm_simulator")
-
-# Define a statevector simulator
-# from qiskit_aer import AerSimulator
-# backend = AerSimulator(method="statevector", shots=100)
-
-# Define a real backend
-# backend = provider.get_backend("ibm_brisbane")
-
 # Inject backend into circuit sampler
 sampler = CircuitSampler(backend).convert(expectation)
 
@@ -273,7 +281,7 @@ difference is the format of the output: `backend.run()` outputs
     backend = provider.get_backend("ibmq_qasm_simulator") # Use the cloud simulator
 
     # Run
-    result = backend.run(circuits)
+    result = backend.run(isa_circuits)
     ```
     
     </TabItem>
@@ -286,7 +294,7 @@ difference is the format of the output: `backend.run()` outputs
     backend = AerSimulator()
 
     # Run
-    result = backend.run(circuits)
+    result = backend.run(isa_circuits)
     ```
     </TabItem>
 </Tabs>
@@ -294,7 +302,7 @@ difference is the format of the output: `backend.run()` outputs
     **Primitives model:** Access real systems through the `qiskit-ibm-runtime` Sampler and Estimator *primitives*. Use **local testing mode** to run local simulations by using Qiskit Runtime fake backends or Aer simulators.
 
 
-    <Tabs>
+<Tabs>
     <TabItem value="hw" label="Run on quantum systems">
     ``` python
     from qiskit_ibm_runtime import SamplerV2 as Sampler, QiskitRuntimeService
@@ -338,11 +346,11 @@ result = job.result()
 </Tabs>
 
 <span id="sampler-example"></span>
-## End-to-end example
+### End-to-end example
 
 The following example shows an end-to-end example of sampling a circuit by using `backend.run()` and `Sampler`.
 
-### 1. Problem definition
+#### 1. Problem definition
 
 We want to find the probability distribution
 associated with a quantum state:
@@ -372,7 +380,7 @@ circuit.h(range(2))
 circuit.cx(0,1)
 circuit.measure_all() # measurement!
 
-# For Qiskit Runtime, circuits must obey the ISA of a particular backend.
+# Circuits must obey the ISA of the backend.
 # Convert to ISA circuits
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 
@@ -390,19 +398,34 @@ circuit = QuantumCircuit(4)
 circuit.h(range(2))
 circuit.cx(0,1)
 circuit.measure_all() # measurement!
+
+# Define provider and simulator backend
+from qiskit import IBMQ
+
+provider = IBMQ.get_provider(hub="ibm-q", group="open", project="main")
+backend = provider.get_backend("ibmq_qasm_simulator")
+
+# Define a statevector simulator
+# from qiskit_aer import AerSimulator
+# backend = AerSimulator(method="statevector", shots=100)
+
+# Define a real backend
+# backend = provider.get_backend("ibm_brisbane")
+
+# Circuits must obey the ISA of a particular backend.
+# Convert to ISA circuits
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_circuit = pm.run(circuit)
 ```
   </TabItem>
 </Tabs>
 
-### 2. Get counts from the result
+#### 2. Get counts from the result
 
 <Tabs>
   <TabItem value="runtime" label="Runtime Sampler">
-    While the user-side syntax of the `Sampler` is very similar to
-`backend.run()`, notice that the workflow is now simplified, as the
-quasi-probability distribution is returned **directly** (no need to
-perform post-processing), together with some key metadata.
-
 ``` python
 sampler = Sampler(backend=backend)
 
@@ -424,23 +447,12 @@ The required steps to reach our goal with `backend.run()` are:
 1.  Run circuits
 2.  Get counts from the result object
 
-First, we run the circuit in a cloud simulator and output the result
+First, we run the circuit and output the result
 object:
 
-<Admonition type="note">
-    Replace `ibmq_qasm_simulator` with your device name to see the complete workflow for a real device.
-</Admonition>
-
-
 ``` python
-from qiskit import IBMQ
-
-# Define provider and backend
-provider = IBMQ.load_account()
-backend = provider.get_backend("ibmq_qasm_simulator")
-
 # Run
-result = backend.run(circuit, shots=1024).result()
+result = backend.run(isa_circuit, shots=1024).result()
 ```
 
 ``` python
@@ -467,7 +479,7 @@ time_taken=0.003215252, client_version={'qiskit': '0.39.5'})
 Now we get the probability distribution from the output:
 
 ``` python
-counts = result.get_counts(circuit)
+counts = result.get_counts(isa_circuit)
 
 >>> print("counts: ", counts)
 counts:  {'0000': 255, '0001': 258, '0010': 243, '0011': 268}
