--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -13,16 +13,16 @@ Follow these examples to design a Qiskit Runtime algorithm.
 
 Use the Estimator primitive to design an algorithm that calculates expectation values.
 
-**Backend.run() model:** In this model, you accessed real systems and remote simulators by using the `qiskit-ibmq-provider` or the `qiskit-ibm-provider` module. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface. The following examples assume you have defined circuits `isa_circuits`.
+**Backend.run() model:** In this model, you accessed real systems and remote simulators by using the `qiskit-ibmq-provider` or the `qiskit-ibm-provider` module. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface. The following examples assume you have defined `isa_circuits`, circuits that follow the instruction set architecture (ISA) of the backend after undergoing transpilation.
 
 
 <Tabs>
   <TabItem value="provider" label="qiskit-ibmq-provider">
 ``` python
-from qiskit import IBMQ
+from qiskit_ibm_provider import IBMProvider
 
 # Select provider
-provider = IBMQ.get_provider(hub="ibm-q", group="open", project="main")
+provider = IBMProvider()
 
 # Get backend
 backend = provider.get_backend("ibmq_qasm_simulator") # cloud simulator
@@ -121,15 +121,15 @@ op = SparsePauliOp.from_list(
 )
 
 # Step 2: Define quantum state
-state = QuantumCircuit(2)
-state.x(0)
-state.x(1)
+circuit = QuantumCircuit(2)
+circuit.x(0)
+circuit.x(1)
 
 # Define a local backend
 from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 backend = FakeManilaV2()
 
-# Define a real backend
+# Or define a real backend
 # from qiskit_ibm_runtime import QiskitRuntimeService
 # service = QiskitRuntimeService()
 # backend = service.least_busy(operational=True, simulator=False)
